# rpgtest

./: README.md  pyproject.toml
rpgtest/: __main__.py  rpgtest.py
rpgtest/lib/: draw.py  types.py
rpgtest/objects/: collider.py  interactor.py  player.py
rpgtest/views/: mainview.py
